Refactoring of code.